# projectX

./: .gitmodules  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  README.md  codecov.yaml  components.md  setup.cfg  setup_ws.sh
.github/workflows/: ros-ci.yml
.github/workflows/workflows/: dev-container.yml  run-unit-test-and-upload-codecov.yml
documents/: usage1.md
documents/reference/: README.md
scripts/: add_submodule_package.sh  do-tests-and-coverage.bash  ros2_aliases.bash  ros2_utils.bash
src/cpp/actions_example_cpp/src/: client_main.cpp  fib_client.cpp
src/cpp/advanced/complete_actions_cpp/src/: fib_server.cpp
src/cpp/image_processing/aruco_detector/src/aruco_detector/: ad_subscriptions.cpp  ad_utils.cpp
src/cpp/image_processing/ros2_usb_camera/config/: config.yaml
src/cpp/image_processing/ros2_usb_camera/src/usb_camera_driver/: ucd_utils.cpp
src/cpp/parameters_example_cpp/src/: parametric_node.cpp
src/cpp/pub_sub_components/: CMakeLists.txt  package.xml
src/cpp/pub_sub_components/include/pub_sub_components/: pub.hpp  sub.hpp
src/cpp/pub_sub_components/launch/: pub_sub_components.launch.py
src/cpp/pub_sub_components/src/: pub.cpp  pub_main.cpp  sub.cpp  sub_main.cpp
src/cpp/simple_service_cpp/include/simple_service_cpp/: simple_service.hpp
src/cpp/simple_service_cpp/src/: client.cpp
src/cpp/topic_pubsub_cpp/: package.xml
src/docs/: index.html  index.md
src/libs/: CMakeLists.txt
src/libs/grasp_planner/: CMakeLists.txt  grasp_planner.hpp  src.cpp
src/libs/motion_planner/: CMakeLists.txt  motion_planner.hpp  src.cpp
src/libs/object_detection/: CMakeLists.txt  object_detection.hpp  src.cpp
src/libs/object_manipulation/: CMakeLists.txt  object_manipulation.hpp  src.cpp
src/libs/perception_system/: CMakeLists.txt  perception_system.hpp  src.cpp
src/libs/pose_estimation/: CMakeLists.txt  pose_estimation.hpp  src.cpp
src/libs/robot_motion_planner/: CMakeLists.txt  robot.cpp  robot.hpp  robot_motion_planner.cpp  robot_motion_planner.hpp
src/libs/sensor_manager/: CMakeLists.txt  sensor_manager.hpp  src.cpp
src/my_controller/: CMakeLists.txt  README.md
src/my_controller/launch/: integration_test.launch.yaml  run_demo.launch.yaml
src/my_model/: CMakeLists.txt  README.md
src/ros2_examples_interfaces/: package.xml
src/ros2_integration_test/: CMakeLists.txt  README.md  package.xml
src/ros2_integration_test/launch/: integration_test.launch.yaml
src/ros2_integration_test/src/: service_server_node.cpp
src/ros2_integration_test/test/: integration_test_node.cpp
src/ros2_template_pkg/: CMakeLists.txt  LICENSE  README.md  package.xml
